--- a/AlzheiGames/app/src/main/res/values/strings.xml
+++ b/AlzheiGames/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="password">Password</string>
     <string name="iniciar_sesion">Iniciar Sesión</string>
     <string name="todo">TODO</string>
+    <string name="btn_juego">Juegos</string>
+    <string name="btn_asistencia">Teleasistencia</string>
 </resources>
